--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,11 @@
   <title>Youtube Downloader</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="download.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -20,17 +19,32 @@
   </div>
 </div>
 <script type="text/javascript">
-  $("button").click(function(){
-    var link = $("input").val();
-    console.log(link);
-    window.open("http://164.132.103.232:3000/" + link, "_self");
-  })
   console.log("Downloading ... " + "<%= file %>");
   var file = "<%= file %>";
-  if (file != '') {
+
+  if (file == '') {
+    $("button").click(function(){
+      var link = $("input").val();
+      console.log(link);
+      window.open("//" + window.location.host + "/" + link, "_self");
+    });
+
+  } else {
     console.log(file);
-    download("downloads/" + file);
-    window.open("http://164.132.103.232:3000/", "_self");
+    download("//" + window.location.host + "/downloads/" + file, file);
+    window.open("//" + window.location.host, "_self");
+  }
+
+  function download(uri, name) {
+    var clickEvt = document.createEvent("MouseEvents");
+    clickEvt.initMouseEvent("click", true, true, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
+
+    var link = document.createElement("a");
+    if(name) {
+      link.download = name;
+    }
+    link.href = uri;
+    link.dispatchEvent(clickEvt);
   }
 </script>
 </body>
